--- a/source/slackStatus.html
+++ b/source/slackStatus.html
@@ -1,28 +1,49 @@
 <script type="text/x-red" data-template-name="slackStatus">
     <div class="form-row">
-        <label for="node-input-slackCertificate"><i class="fa fa-user"></i> Slack</label>
+        <label for="node-input-slackCertificate"><i class="fa fa-certificate"></i> Slack</label>
         <input type="text" id="node-input-slackCertificate">
     </div>
     <div class="form-row">
-        <label for="node-input-childpath"><i class="fa fa-sitemap"></i> Status</label>
-        <input type="text" id="node-input-childpath" placeholder="path-to/the/data">
+        <label for="node-input-statusContent"><i class="fa fa-commenting-o"></i> Status</label>
+        <input type="text" id="node-input-statusContent" style="width:70%" placeholder="Dinner">
     </div>
     <div class="form-row">
-        <label for="node-input-method"><i class="fa fa-terminal"></i> Icon</label>
-        <select id="node-input-method" type="text" style="width:70%" text-center>
-        <option value="get" default>1</option>
-        <option value="set">2</option>
-        <option value="push">3</option>
-        <option value="update">4</option>
-        <option value="msg.method">[msg.method]</option>
+        <label for="node-input-icon"><i class="fa fa-smile-o"></i> Icon</label>
+        <select id="node-input-icon" type="text" style="width:70%" text-center>
+            <option value="😀" default>😀</option>
+            <option value="🤣">🤣</option>
+            <option value="🥰">🥰</option>
+            <option value="😴">😴</option>
+            <option value="🥶">🥶</option>
+            <option value="😡">😡</option>
+            <option value="💩">💩</option>
+            <option value="💬" >💬</option>
+            <option value="🍴">🍴</option>
+            <option value="🏇🏻">🏇🏻</option>
+            <option value="🛀">🛀</option>
+            <option value="🍙">🍙</option>
+            <option value="🍺">🍺</option>
+            <option value="🚆">🚆</option>
+            <option value="msg.icon">[msg.icon]</option>
         </select>
-    </div> 
+    </div>
 </script>
 
 <script type="text/x-red" data-help-name="slackStatus">
     <p>Slack status</p>
+    <p>With this node, you can change status in <a href="https://app.slack.com/">Slack</a>.</p>
+    <p>Input Parameters:
+        <ul>
+            <li><b>Status</b> - The status that users want to send in Slack by <b>Status</b> property or the <code>msg.[payload]</code> property</li>
+            <li><b>Icon</b> - The icon that users want to send in Slack by <b>Icon</b> property or the <code>msg.icon</code> property</li>
+        </ul>
+    </p>
+    <p>Return values:
+        <ul>
+            <li><b>payload</b> Will provide message "Change status successfully" or provide an error state</li>
+        </ul>
+    </p>
 </script>
-
 
 <script type="text/javascript">
     RED.nodes.registerType('slackStatus', {
@@ -30,13 +51,9 @@
         color: "#fdd0a2",
         defaults: {
             slackCertificate: { type: 'slackCertificate', required: true },
-            client_email: { value: "" },
-            private_key: { value: "" },
-            data: { value: "" },
-            childpath: { value: "", validate: RED.validators.typedInput("propertyType") },
-            propertyType: { value: "str" },
-            method: { value: 'get', required: true },
-            newchildpath: { value: "" }
+            statusContent: { value: "payload", validate: RED.validators.typedInput("statusType") },
+            statusType: { value: "msg" },
+            icon: { value: '😀', required: true }
         },
         inputs: 1,
         outputs: 1,
@@ -45,10 +62,10 @@
         label: 'Slack status',
         paletteLabel: 'Slack status',
         oneditprepare: function () {
-            $("#node-input-childpath").typedInput({ default: this.propertyType || 'str', types: ['str', 'msg', 'flow', 'global'] });
+            $("#node-input-statusContent").typedInput({ default: this.statusType || 'msg', types: ['str', 'msg', 'flow', 'global'] });
         },
         oneditsave: function () {
-            this.propertyType = $("#node-input-childpath").typedInput('type');
+            this.statusType = $("#node-input-statusContent").typedInput('type');
         }
     });
 </script>
